--- a/1.html
+++ b/1.html
@@ -94,7 +94,7 @@
 		<div id="ad-box-text">
 			He want to kill you
 		</div>
-		<a href="../Lesson 15/index.html">
+		<a href="https://ru.wikipedia.org/wiki/%D0%9E%D0%BD%D0%BE_(%D1%84%D0%B8%D0%BB%D1%8C%D0%BC,_2017)">
 			<div id="ad-box-btn" class="simple-border-btn">
 				It
 			</div>
