--- a/2.html
+++ b/2.html
@@ -12,7 +12,7 @@
 		<div id="top-menu-btn1" class="top-menu-btn">
 			<img src="cold.png" class="vec">
 			<div class="tmb-menu">
-				<a href="index.html">
+				<a href="1.html">
 					<div class="tmb-menu-btn simple-border-btn">
 						Dyadya deda
 					</div>
@@ -37,7 +37,7 @@
 						Deadpool
 					</div>
 				</a>
-				<a href="">
+				<a href="index.html">
 					<div class="tmb-menu-btn simple-border-btn">
 						Garfild
 					</div>
@@ -94,7 +94,7 @@
 		<div id="ad-box-text">
 			He want to kill you
 		</div>
-		<a href="../Lesson 15/index.html">
+		<a href="https://ru.wikipedia.org/wiki/%D0%9E%D0%BD%D0%BE_(%D1%84%D0%B8%D0%BB%D1%8C%D0%BC,_2017)">
 			<div id="ad-box-btn" class="simple-border-btn">
 				It
 			</div>
