--- a/3.html
+++ b/3.html
@@ -5,14 +5,14 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<script type="text/javascript" src="jquery-3.4.1.min.js"></script>
 	<script type="text/javascript" src="script.js"></script>
-	<title>Garfild</title>
+	<title>Deadpool</title>
 </head>
 <body>
 	<div id="top-menu">
 		<div id="top-menu-btn1" class="top-menu-btn">
 			<img src="cold.png" class="vec">
 			<div class="tmb-menu">
-				<a href="index.html">
+				<a href="1.html">
 					<div class="tmb-menu-btn simple-border-btn">
 						Dyadya deda
 					</div>
@@ -32,12 +32,12 @@
 		<div id="top-menu-btn2" class="top-menu-btn">
 			<img src="hot.png" class="vec">
 			<div class="tmb-menu">
-				<a href="3.html">
+				<a href="index.html">
 					<div class="tmb-menu-btn simple-border-btn">
 						Deadpool
 					</div>
 				</a>
-				<a href="">
+				<a href="2.html">
 					<div class="tmb-menu-btn simple-border-btn">
 						Garfild
 					</div>
@@ -94,14 +94,16 @@
 		<div id="ad-box-text">
 			He want to kill you
 		</div>
-		<a href="../Lesson 15/index.html">
+		<a href="https://ru.wikipedia.org/wiki/%D0%9E%D0%BD%D0%BE_(%D1%84%D0%B8%D0%BB%D1%8C%D0%BC,_2017)">
 			<div id="ad-box-btn" class="simple-border-btn">
 				It
 			</div>
 		</a>
 	</div>
 	<div class="box" style="background-color: #111; padding: 100px; font-size: 30px; color: #fff;">
-		«Гарфилд» (англ. Garfield) — американская комедия 2004 года по мотивам комиксов Джима Дэвиса. Российская премьера состоялась 26 августа 2004 года. Фильм получил разгромную прессу, однако это не помешало ему стать коммерчески успешным. При бюджете 50 млн долларов картина заработала в прокате более 200 млн.
+		Дэдпул, Дедпул (англ. Deadpool), настоящее имя Уэйд Уинстон Уилсон (Wade Winston Wilson) — антигерой комиксов издательства Marvel Comics, созданный художником Робом Лайфелдом и писателем Фабьеном Нисизой и впервые появившийся в комиксе The New Mutants #98 (февраль 1991). Прозванный «Болтливым наёмником», персонаж обладает нестандартным, крайне циничным чувством юмора.
+
+		Как и Росомаха из Людей Икс, Дэдпул был подвергнут опытам по программе «Оружие Икс». После того как учёные попытались исцелить его рак, привив его клеткам способность к регенерации, Дэдпул остался изуродованным и психически нестабильным. Первоначально появившись, как и множество других персонажей, в основной Вселенной Marvel, он впоследствии получил альтернативные варианты, существующие в других реальностях Мультивселенной, в том числе в «Эре Апокалипсиса» и Ultimate-вселенной.
 	</div>
 	<div id="footer" class="box">
 		Site created by <a href="https://www.youtube.com/feed/my_videos">Stepashka</a> | <a href="footer/COOKIE policy.txt">COOKIE policy</a> | <a href="footer/Privacy policy.txt">Privacy policy</a>
