--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 		<div id="ad-box-text">
 			He want to kill you
 		</div>
-		<a href="../Lesson 15/index.html">
+		<a href="https://ru.wikipedia.org/wiki/%D0%9E%D0%BD%D0%BE_(%D1%84%D0%B8%D0%BB%D1%8C%D0%BC,_2017)">
 			<div id="ad-box-btn" class="simple-border-btn">
 				It
 			</div>
@@ -106,12 +106,12 @@
 		<div id="box1-title">
 			<b>Who are you?</b><br>
 			Where are you live?<br>
-			<a href="">
+			<a href="https://ru.wikipedia.org/wiki/%D0%92%D0%BB%D0%B0%D0%B4%D0%B8%D1%81%D0%BB%D0%B0%D0%B2">
 				<div id="box1-title-btn1" class="box1-title-btn simple-solid-btn">
 					Vladki or...
 				</div>
 			</a>
-			<a href="">
+			<a href="https://ru.wikipedia.org/wiki/%D0%90%D0%BD%D1%82%D0%BE%D0%BD">
 				<div id="box1-title-btn2" class="box1-title-btn simple-border-btn">
 					Anton
 				</div>
@@ -126,7 +126,7 @@
 			<b>I kills Vladki at 12 p.m. or...</b><br>
 			or Anton<br>
 
-			<a href="">
+			<a href="https://ru.wikipedia.org/wiki/%D0%9A%D0%B0%D1%82%D0%B5%D0%B3%D0%BE%D1%80%D0%B8%D1%8F:%D0%A3%D0%B1%D0%B8%D0%B9%D1%81%D1%82%D0%B2%D0%B0_%D0%BD%D0%B0_%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%B5">
 				<div id="box2-title-btn" class="simple-border-btn">
 					Killll
 				</div>
@@ -141,12 +141,12 @@
 			<div id="box3-card-title" class="box3-card-title">
 				<b>BABY SHARK</b><br>
 				doo-doo-doo-doo-doo-doo<br>
-				<a href="">
+				<a href="https://ru.wikipedia.org/wiki/Baby_Shark">
 					<div id="box3-card1-btn1" class="box3-card-btn simple-border-btn">
 						Lets go run
 					</div>
 				</a>
-				<a href="">
+				<a href="https://ru.wikipedia.org/wiki/Baby_Shark">
 					<div id="box3-card1-btn2" class="box3-card-btn simple-border-btn">
 						Lets go run
 					</div>
@@ -159,12 +159,12 @@
 			<div id="box3-card-title" class="box3-card-title">
 			<b>BABY SHARK</b><br>
 				doo-doo-doo-doo-doo-doo<br>
-				<a href="4.jpg">
+				<a href="https://ru.wikipedia.org/wiki/Baby_Shark">
 					<div id="box3-card2-btn1" class="box3-card-btn simple-border-btn">
 						Run away baby
 					</div>
 				</a>
-				<a href="2.png">
+				<a href="https://ru.wikipedia.org/wiki/Baby_Shark">
 					<div id="box3-card2-btn2" class="box3-card-btn simple-border-btn">
 						Run away baby
 					</div>
