--- a/1/index.html
+++ b/1/index.html
@@ -9,8 +9,9 @@
 	<div id="top-menu"></div>
 	<div id="letter">
 		<img src="cake.png" id="cake">
+		<img src="dr.png" id="dr">
 		<p id="text"><b>Степашка</b><br>
-		<i>С днем рождения Диана!Желаю счастья,здоровья и всего наилучшего!Чтобы у тебя всегда все получалось,за что бы ты не бралась!Извени что я не пришол на день рождения.</i></p>
+		<i>С днем рождения Диана!Желаю счастья,здоровья и всего наилучшего!Чтобы у тебя всегда все получалось,за что бы ты не бралась!Извени что я не пришол на день рождения.Коротко зато по сути!</i></p>
 		<p id="twice"><b>Вероника</b><br>
 		<i>В этот день рождения, Дианочка, мы желаем тебе всего самого нужного в жизни: любви, достатка, крепкого здоровья и преданных друзей! Пускай твои прекрасные глазки всегда сияют от счастья, а улыбка блестит и согревает всех окружающих добром и положительными эмоциями! Желаем никогда не стоять на месте, а постоянно двигаться только вперед — к своим мечтам, идеям и желаниям. Диана, желаем быть истинной королевой своей жизни, желаем побеждать в любом бою и добиваться высоких результатов в любом деле. Пусть твоё сердце ведёт тебя к заветной мечте, пусть душа твоя не знает одиночества и грусти. Желаем в жизни много радостных мгновений, чудесных и ярких дней, лет! Пусть воплощаются все планы и стремления, обязательно в кругу преданных друзей! А мы всегда будем рядом и в трудный момент и в радосные мгновения!</i></p>
 		<p id="third"><b>Антон</b><br>
