--- a/1/index.html
+++ b/1/index.html
@@ -18,10 +18,28 @@
 		<i>Диана, поздравляю тебя с Днём Рождения!
 		Желаю тебе крепкого здоровья, чтобы тебя не огорчали, ты всегда улыбалась и была на позитиве. Чтобы никогда не предавали друзья. Будь СЧАСТЛИВА!!!
 		С ДНЁМ РОЖДЕНИЯ!!!</i></p>
+		<br>
+		<br>
+		<p id="fourth"><b>Воспоминания</b></p>
+		<img src="dr1.jpg" id="dr1" class="drr">
+		<img src="dr2.jpg" id="dr2" class="drr">
+		<img src="dr3.jpg" id="dr3" class="drr">
+		<div id="dianoid">
+			<p class="p"><b><i>dianoid</i></b></p>
+		</div>
+		<div id="dianoid2">
+			<p class="p"><b><i>dianoid</i></b></p>
+		</div>
 	</div>
 	<div id="bottom-menu">
-		
-	</div>
+		<a href="#top-menu">
+			<div id="up-btn">
+				<div class="arrow">
+				
+				</div>
+			</div>
+		</a>
+	</div> 
 </body>
 </html>
 
