--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<script type="text/javascript" src="jquery-3.4.1.min.js"></script>
+	<script type="text/javascript" src="jquery-3.5.1.min.js"></script>
 	<script type="text/javascript" src="script.js"></script>
-	<title>modern</title>
+	<title>Cartoons and games</title>
 </head>
 <body>
 	<div id="top-menu">
@@ -65,25 +65,6 @@
 				<a href="https://www.ivi.ru/watch/gubka_bob_kvadratnyie_shtanyi/season8">
 					<div class="tmb-menu-btn simple-border-btn">
 						Patric
-					</div>
-				</a>
-			</div>
-		</div>
-		<div id="top-menu-right-btn">
-			<div id="tmrb-menu" class="tmb-menu">
-				<a href="https://www.ivi.ru/watch/gubka_bob_kvadratnyie_shtanyi/season8">
-					<div id="tmrb-menu-btn simple-border-btn">
-						Sandi
-					</div>
-				</a>
-				<a href="https://www.ivi.ru/watch/gubka_bob_kvadratnyie_shtanyi/season8">
-					<div id="tmrb-menu-btn simple-border-btn">
-						Krabs
-					</div>
-				</a>
-				<a href="https://www.ivi.ru/watch/gubka_bob_kvadratnyie_shtanyi/season8">
-					<div id="tmrb-menu-btn simple-border-btn">
-						Plankton
 					</div>
 				</a>
 			</div>
@@ -283,22 +264,22 @@
 				<th><img src="14.jpg"></th>
 				<th><img src="12.jpg"></th>
 				<th><img src="13.jpg"></th>
-				<th><img src="14.jpg"></th>
+				<th><img src="15.jpg"></th>
 			</tr>
 			<tr>
-				<th><img src="12.jpg"></th>
-				<th colspan="2" rowspan="2"><img src="13.jpg"></th>
-				<th><img src="14.jpg"></th>
+				<th><img src="16.jpg"></th>
+				<th colspan="2" rowspan="2"><img src="20.jpg"></th>
+				<th><img src="17.jpg"></th>
 			</tr>
 			<tr>
-				<th><img src="12.jpg"></th>
-				<th><img src="13.jpg"></th>
+				<th><img src="23.jpeg"></th>
+				<th><img src="24.jpg"></th>
 			</tr>
 			<tr>
-				<th><img src="14.jpg"></th>
-				<th><img src="12.jpg"></th>
-				<th><img src="13.jpg"></th>
-				<th><img src="14.jpg"></th>
+				<th><img src="18.jpg"></th>
+				<th><img src="19.jpg"></th>
+				<th><img src="20.jpg"></th>
+				<th><img src="21.jpg"></th>
 			</tr>
 		</table>
 	</div>
