--- a/menu/index.html
+++ b/menu/index.html
@@ -6,7 +6,9 @@
 	<title>Menu</title>
 </head>
 <body>
-	<div id="top-menu"></div>
+	<div id="top-menu">
+		<p>Переходим по ссылочкам, не боимся!</p>
+	</div>
 	<div id="letter">
 		<a href="stepaniya.github.io/diana/">
 			<p>Дианины дни рожденья.</p>
