--- a/1/index.html
+++ b/1/index.html
@@ -6,7 +6,15 @@
 	<title>Открытка</title>
 </head>
 <body>
-	<div id="top-menu"></div>
+	<div id="top-menu">
+		<a href="https://stepaniya.github.io/diana/">
+			<div id="up-btn">
+				<div class="arrow">
+				
+				</div>
+			</div>
+		</a>
+	</div>
 	<div id="letter">
 		<img src="cake.png" id="cake">
 		<img src="dr.png" id="dr">
@@ -32,13 +40,7 @@
 		</div>
 	</div>
 	<div id="bottom-menu">
-		<a href="#top-menu">
-			<div id="up-btn">
-				<div class="arrow">
-				
-				</div>
-			</div>
-		</a>
+		
 	</div> 
 </body>
 </html>
