--- a/diana/index.html
+++ b/diana/index.html
@@ -3,26 +3,26 @@
 <head>
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<title>Menu</title>
+	<title>Открытки Дианы</title>
 </head>
 <body>
 	<div id="top-menu">
 		<p>Переходим по ссылочкам, не боимся!</p>
-	</div>
-	<div id="letter">
-		<a href="https://stepaniya.github.io/diana/">
-			<p>Дианины дни рожденья.</p>
-		</a>
-	</div>
-	<div id="bottom-menu">
-		<a href="#top-menu">
+		<a href="https://stepaniya.github.io/menu/">
 			<div id="up-btn">
 				<div class="arrow">
 				
 				</div>
 			</div>
 		</a>
-		<p id="ppp"> - кнопка чтобы вернуться</p>
+	</div>
+	<div id="letter">
+		<a href="https://stepaniya.github.io/1/">
+			<p>День рождение 2020</p>
+		</a>
+	</div>
+	<div id="bottom-menu">
+		
 	</div> 
 </body>
 </html>
