--- a/menu/index.html
+++ b/menu/index.html
@@ -10,8 +10,11 @@
 		<p>Переходим по ссылочкам, не боимся!</p>
 	</div>
 	<div id="letter">
-		<a href="https://stepaniya.github.io/diana/">
-			<p>Дианины дни рожденья.</p>
+		<a href="https://stepaniya.github.io/all/index.html">
+			<p id="dianoid" class="text">Дианины дни рожденья.</p>
+		</a>
+		<a href="https://stepaniya.github.io/all/1.html">
+			<p id="margo" class="text">Дни рожденья Марго.</p>
 		</a>
 	</div>
 	<div id="bottom-menu">
