--- a/all/1.html
+++ b/all/1.html
@@ -8,7 +8,7 @@
 <body>
 	<div id="top-menu">
 		<p>Переходим по ссылочкам, не боимся!</p>
-		<a href="https://stepaniya.github.io/menu/">
+		<a href="https://stepaniya.github.io/2/">
 			<div id="up-btn">
 				<div class="arrow">
 				
