--- a/2/index.html
+++ b/2/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<div id="top-menu">
-		<a href="https://stepaniya.github.io/all/1.html">
+		<a href="https://stepaniya.github.io/margo/">
 			<div id="up-btn">
 				<div class="arrow">
 				
