--- a/margo/index.html
+++ b/margo/index.html
@@ -8,7 +8,7 @@
 <body>
 	<div id="top-menu">
 		<p>Переходим по ссылочкам, не боимся!</p>
-		<a href="https://stepaniya.github.io/2/">
+		<a href="https://stepaniya.github.io/menu/">
 			<div id="up-btn">
 				<div class="arrow">
 				
@@ -17,7 +17,7 @@
 		</a>
 	</div>
 	<div id="letter">
-		<a href="https://stepaniya.github.io/1/">
+		<a href="https://stepaniya.github.io/2/">
 			<p>День рождение 2020</p>
 		</a>
 	</div>
