--- a/menu/index.html
+++ b/menu/index.html
@@ -10,10 +10,10 @@
 		<p>Переходим по ссылочкам, не боимся!</p>
 	</div>
 	<div id="letter">
-		<a href="https://stepaniya.github.io/all/index.html">
+		<a href="https://stepaniya.github.io/dianoid/">
 			<p id="dianoid" class="text">Дианины дни рожденья.</p>
 		</a>
-		<a href="https://stepaniya.github.io/all/1.html">
+		<a href="https://stepaniya.github.io/margo/">
 			<p id="margo" class="text">Дни рожденья Марго.</p>
 		</a>
 	</div>
