--- a/1/index.html
+++ b/1/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<div id="top-menu">
-		<a href="https://stepaniya.github.io/all/index.html">
+		<a href="https://stepaniya.github.io/dianoid/">
 			<div id="up-btn">
 				<div class="arrow">
 				
