--- a/Game/index.html
+++ b/Game/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
 	<div id="list">
+		<img src="1.jpeg" id="img">
 		<p id="hi">Добро пожаловать в игру!</p>
 		<a href="https://stepaniya.github.io/Game/Levels/level1">
 			<div id="hard1" class="hards">
