--- a/Game/Levels/level1/index.html
+++ b/Game/Levels/level1/index.html
@@ -3,10 +3,21 @@
 <head>
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width">
+	<script type="text/phyton" src="phyton.py"></script>
 	<title>level_1</title>
 </head>
 <body>
+	<script type="script.js"></script>
 	<div id="list">
+		<iframe height="200px" width="500px" src="" scrolling="no"></iframe>
+		<a href="https:///stepaniya.github.io/Game">
+			<div id="up-btn">
+				<div class="arrow">
+					
+				</div>
+			</div>
+		</a>
 		<img src="1.jpeg" id="img">
 		<p id="hi">Добро пожаловать в игру!</p>
 	</div>
