--- a/Game/index.html
+++ b/Game/index.html
@@ -3,15 +3,13 @@
 <head>
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<!-- <link rel="script" href="random_numebr.py"> -->
-	<script type="text/phyton" src="phyton.py"></script>
 	<title>Game</title>
 </head>
 <body>
 	<div id="list">
 		<img src="1.jpeg" id="img">
 		<p id="hi">Добро пожаловать в игру!</p>
-		<a href="https://stepaniya.github.io/Game/Levels/level1">
+		<a href="https://stepaniya.github.io/Game/Levels/level1/console">
 			<div id="hard1" class="hards">
 				<p id="level1" class="levels">Уровень 1</p>
 			</div>
