--- a/Game/index.html
+++ b/Game/index.html
@@ -9,7 +9,7 @@
 	<div id="list">
 		<img src="1.jpeg" id="img">
 		<p id="hi">Добро пожаловать в игру!</p>
-		<a href="https://stepaniya.github.io/Game/Levels/level1/console">
+		<a href="https://stepaniya.github.io/Game/Levels/level1">
 			<div id="hard1" class="hards">
 				<p id="level1" class="levels">Уровень 1</p>
 			</div>
