--- a/Game/Levels/level1/index.html
+++ b/Game/Levels/level1/index.html
@@ -4,13 +4,14 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
-	<script type="text/phyton" src="phyton.py"></script>
+	<script type="text/phyton" src="Game_1.py"></script>
+	<script type="text/phyton" src="Console_1.py"></script>
 	<title>level_1</title>
 </head>
 <body>
 	<script type="script.js"></script>
 	<div id="list">
-		<iframe height="200px" width="500px" src="" scrolling="no"></iframe>
+		<iframe height="200px" width="500px" src="https:///stepaniya.github.io/Game/Levels/level1/Console_1.py" scrolling="no"></iframe>
 		<a href="https:///stepaniya.github.io/Game">
 			<div id="up-btn">
 				<div class="arrow">
