--- a/Game/Levels/level1/index.html
+++ b/Game/Levels/level1/index.html
@@ -11,7 +11,7 @@
 <body>
 	<script type="script.js"></script>
 	<div id="list">
-		<iframe name="frame" type="text" height="200px" width="500px" src="https://stepaniya.github.io/Game/Levels/level1/rndm_nmbr_1.html" scrolling="yes"></iframe>
+		<iframe name="frame" type="text" height="200px" width="500px" src="https:///stepaniya.github.io/Game/Levels/level1/rndm_nmbr_1.html" scrolling="yes"></iframe>
 		<a href="https:///stepaniya.github.io/Game">
 			<div id="up-btn">
 				<div class="arrow">
