--- a/menu/index.html
+++ b/menu/index.html
@@ -16,6 +16,9 @@
 		<a href="https://stepaniya.github.io/margo/">
 			<p id="margo" class="text">Дни рожденья Марго.</p>
 		</a>
+		<a href="https://stepaniya.github.io/lizon/">
+			<p id="lizon" class="text">Дни рожденья Лизы.</p>
+		</a>
 	</div>
 	<div id="bottom-menu">
 		<a href="#top-menu">
