--- a/Game/Levels/level1/index.html
+++ b/Game/Levels/level1/index.html
@@ -11,8 +11,8 @@
 <body>
 	<script type="script.js"></script>
 	<div id="list">
-		<iframe name="frame" type="text" height="200px" width="500px" src="../" scrolling="yes">
-			<input type="text" id="inputik">
+		<iframe name="frame" type="text" height="200px" width="500px" src="https://stepaniya.github.io/Game/Levels/level1/rndm_nmbr_1../" scrolling="yes">
+			<input type="text" name="name" id="inputik">
 		</iframe>
 		<a href="https:///stepaniya.github.io/Game">
 			<div id="up-btn">
