--- a/Game/Levels/level1/index.html
+++ b/Game/Levels/level1/index.html
@@ -11,9 +11,9 @@
 <body>
 	<script type="script.js"></script>
 	<div id="list">
-		<iframe name="frame" type="text" height="200px" width="500px" src="https://stepaniya.github.io/Game/Levels/level1/rndm_nmbr_1../" scrolling="yes">
-			<input type="text" name="name" id="inputik">
+		<iframe name="frame" type="text" height="200px" width="500px" src="https://stepaniya.github.io/Game/Levels/level1/rndm_nmbr_1/Game_1.py" scrolling="yes">
 		</iframe>
+		<h2><p id="ppp">Скачайте файл с игрой. Нажмите на стрелку и показать в папке. Когда компъютер перенесёт вас к файлу, нажмите на него правой кнопкой мыши. У вас всего десять попыток. Удачи!</p></h2>
 		<a href="https:///stepaniya.github.io/Game">
 			<div id="up-btn">
 				<div class="arrow">
@@ -26,4 +26,3 @@
 	</div>
 </body>
 </html>
-https:///stepaniya.github.io/Game/Levels/level1/rndm_nmbr_1.html
