--- a/Game/Levels/level1/index.html
+++ b/Game/Levels/level1/index.html
@@ -4,14 +4,13 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
-	<script type="text/phyton" src="Game_1.py"></script>
-	<script type="text/phyton" src="Console_1.py"></script>
+	<script type="text/phyton" src="xren_1.exe"></script>
 	<title>level_1</title>
 </head>
 <body>
 	<script type="script.js"></script>
 	<div id="list">
-		<iframe name="frame" type="text" height="200px" width="500px" src="https://stepaniya.github.io/Game/Levels/level1/rndm_nmbr_1/Game_1.py" scrolling="yes">
+		<iframe name="frame" type="text" height="200px" width="500px" src="https://stepaniya.github.io/Game/Levels/level1/rndm_nmbr_1/xren_1.exe" scrolling="yes">
 		</iframe>
 		<h2><p id="ppp">Скачайте файл с игрой. Нажмите на стрелку и показать в папке. Когда компъютер перенесёт вас к файлу, нажмите на него правой кнопкой мыши. У вас всего десять попыток. Удачи!</p></h2>
 		<a href="https:///stepaniya.github.io/Game">
