--- a/Game/Levels/level1/index.html
+++ b/Game/Levels/level1/index.html
@@ -10,7 +10,7 @@
 <body>
 	<script type="script.js"></script>
 	<div id="list">
-		<iframe name="frame" type="text" height="200px" width="500px" src="https://stepaniya.github.io/Game/Levels/level1/rndm_nmbr_1/xren_1.exe" scrolling="yes">
+		<iframe name="frame" type="text" height="200px" width="500px" src="" scrolling="yes">
 		</iframe>
 		<h2><p id="ppp">Скачайте файл с игрой. Нажмите на стрелку и показать в папке. Когда компъютер перенесёт вас к файлу, нажмите на него правой кнопкой мыши. У вас всего десять попыток. Удачи!</p></h2>
 		<a href="https:///stepaniya.github.io/Game">
@@ -20,8 +20,14 @@
 				</div>
 			</div>
 		</a>
+		<a href="https://stepaniya.github.io/Game/Levels/level1/rndm_nmbr_1/xren_1.exe" id="drdr" download="">
+			<div id="download">
+				<p id="downloadp"><h1>Скачать игру</h1></p>
+			</div>
+		</a>
 		<img src="1.jpeg" id="img">
 		<p id="hi">Добро пожаловать в игру!</p>
 	</div>
 </body>
 </html>
+https://stepaniya.github.io/Game/Levels/level1/rndm_nmbr_1/xren_1.exe
