--- a/Game/Levels/level1/index.html
+++ b/Game/Levels/level1/index.html
@@ -3,7 +3,7 @@
 <head>
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width">
+	<meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no">
 	<script type="text/phyton" src="xren_1.exe"></script>
 	<title>level_1</title>
 </head>
@@ -30,4 +30,4 @@
 	</div>
 </body>
 </html>
-https://stepaniya.github.io/Game/Levels/level1/rndm_nmbr_1/xren_1.exe
+<!-- <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"> -->
