--- a/Game/Levels/level1/index.html
+++ b/Game/Levels/level1/index.html
@@ -3,7 +3,7 @@
 <head>
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<meta charset="utf-8">
-	<meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<script type="text/phyton" src="xren_1.exe"></script>
 	<title>level_1</title>
 </head>
@@ -27,7 +27,10 @@
 		</a>
 		<img src="1.jpeg" id="img">
 		<p id="hi">Добро пожаловать в игру!</p>
+		<div id="rules">
+			<h2>Правила игры</h2>
+			<div id="rulesp"><h3>Первым делом ваш компьютер вас спрашивает какой вы хотите пройти уровень.Уровней всего три 1-лёгкий,2-нормальный,3-сложный.Вы должны ввести число от одного до трёх.В строке введите число вы должны будете отгадать число в первом уровне от 1 до 25,во втром от 1 до 50 и в третьем от 1 до 100. Попыток у вас будет в каждом уровне всего десять.При поражении либо же при победе чтобы игру начать заново нужно нажать Enter.Приятной игры!</h3></div>
+		</div>
 	</div>
 </body>
 </html>
-<!-- <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"> -->
